--- a/contracts_tracking/get_tokenlist.ipynb
+++ b/contracts_tracking/get_tokenlist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,177 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>chainId</th>\n",
-       "      <th>address</th>\n",
-       "      <th>name</th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>decimals</th>\n",
-       "      <th>list_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0x00F932F0FE257456b32dedA4758922E56A4F4b42</td>\n",
-       "      <td>Paper</td>\n",
-       "      <td>PAPER</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0x00a35FD824c717879BF370E70AC6868b95870Dfb</td>\n",
-       "      <td>Iron Bank</td>\n",
-       "      <td>IB</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0x01B8b6384298D4848E3BE63D4C9D17830EeE488A</td>\n",
-       "      <td>DAOhaus Token on Optimism</td>\n",
-       "      <td>HAUS</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0x03e5b5930f3a42b56af4a982b10e60957bdd2f61</td>\n",
-       "      <td>Prime</td>\n",
-       "      <td>D2D</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0x09448876068907827ec15F49A8F1a58C70b04d45</td>\n",
-       "      <td>Ripae Share ETH</td>\n",
-       "      <td>sETHo</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0xef6301da234fc7b0545c6e877d3359fe0b9e50a4</td>\n",
-       "      <td>SUKU</td>\n",
-       "      <td>SUKU</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0xf98dcd95217e15e05d8638da4c91125e59590b07</td>\n",
-       "      <td>Kromatika</td>\n",
-       "      <td>KROM</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0xfD389Dc9533717239856190F42475d3f263a270d</td>\n",
-       "      <td>Granary Token</td>\n",
-       "      <td>GRAIN</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>206</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0xfDeFFc7Ad816BF7867C642dF7eBC2CC5554ec265</td>\n",
-       "      <td>Beefy Velo</td>\n",
-       "      <td>BeVELO</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[velodrome-finance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0xff733b2a3557a7ed6697007ab5d11b79fdd1b76b</td>\n",
-       "      <td>Across Protocol Token</td>\n",
-       "      <td>ACX</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>208 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     chainId                                     address  \\\n",
-       "0         10  0x00F932F0FE257456b32dedA4758922E56A4F4b42   \n",
-       "1         10  0x00a35FD824c717879BF370E70AC6868b95870Dfb   \n",
-       "2         10  0x01B8b6384298D4848E3BE63D4C9D17830EeE488A   \n",
-       "3         10  0x03e5b5930f3a42b56af4a982b10e60957bdd2f61   \n",
-       "4         10  0x09448876068907827ec15F49A8F1a58C70b04d45   \n",
-       "..       ...                                         ...   \n",
-       "203       10  0xef6301da234fc7b0545c6e877d3359fe0b9e50a4   \n",
-       "204       10  0xf98dcd95217e15e05d8638da4c91125e59590b07   \n",
-       "205       10  0xfD389Dc9533717239856190F42475d3f263a270d   \n",
-       "206       10  0xfDeFFc7Ad816BF7867C642dF7eBC2CC5554ec265   \n",
-       "207       10  0xff733b2a3557a7ed6697007ab5d11b79fdd1b76b   \n",
-       "\n",
-       "                          name  symbol  decimals            list_name  \n",
-       "0                        Paper   PAPER        18  [ethereum-optimism]  \n",
-       "1                    Iron Bank      IB        18  [velodrome-finance]  \n",
-       "2    DAOhaus Token on Optimism    HAUS        18  [ethereum-optimism]  \n",
-       "3                        Prime     D2D        18  [ethereum-optimism]  \n",
-       "4              Ripae Share ETH   sETHo        18  [velodrome-finance]  \n",
-       "..                         ...     ...       ...                  ...  \n",
-       "203                       SUKU    SUKU        18  [ethereum-optimism]  \n",
-       "204                  Kromatika    KROM        18  [ethereum-optimism]  \n",
-       "205              Granary Token   GRAIN        18  [velodrome-finance]  \n",
-       "206                 Beefy Velo  BeVELO        18  [velodrome-finance]  \n",
-       "207      Across Protocol Token     ACX        18  [ethereum-optimism]  \n",
-       "\n",
-       "[208 rows x 6 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the JSON data from the URL\n",
     "df_list = []\n",
@@ -227,20 +59,20 @@
     "\n",
     "df = df.groupby(['chainId', 'address', 'name', 'symbol', 'decimals'])['list_name'].agg(list)\n",
     "df = df.reset_index()\n",
-    "display(df)"
+    "# display(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-17 08:59:33.632 | INFO     | duneapi_utils:get_dune_data:44 - Results available at https://dune.com/queries/2420477\n",
-      "2023-09-17 08:59:34.382 | INFO     | duneapi_utils:get_dune_data:89 - ✨ Results saved as csv_outputs/my_query_results.csv, with 560 rows and 4 columns.\n"
+      "2023-09-17 09:01:59.141 | INFO     | duneapi_utils:get_dune_data:44 - Results available at https://dune.com/queries/2420477\n",
+      "2023-09-17 09:02:00.402 | INFO     | duneapi_utils:get_dune_data:89 - ✨ Results saved as csv_outputs/my_query_results.csv, with 560 rows and 4 columns.\n"
      ]
     }
    ],
@@ -251,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,190 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>address</th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>decimals</th>\n",
-       "      <th>name</th>\n",
-       "      <th>list_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0x03e5b5930f3a42b56af4a982b10e60957bdd2f61</td>\n",
-       "      <td>D2D</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Prime</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>0x629c2fd5d5f432357465b59d7832389a89956f0b</td>\n",
-       "      <td>COC</td>\n",
-       "      <td>18</td>\n",
-       "      <td>CryptoOracle Collective</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>0x6c518f9D1a163379235816c543E62922a79863Fa</td>\n",
-       "      <td>bwAJNA</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Burn Wrapped AJNA</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>0x76c37F9949e05b37C8373d155C1Fef46a6858481</td>\n",
-       "      <td>ePendle</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Equilibria Pendle</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>0x8368Dca5CE2a4Db530c0F6e535d90B6826428Dee</td>\n",
-       "      <td>FPIS</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Frax Price Index Share</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>0x8637725aDa78db0674a679CeA2A5e0A0869EF4A1</td>\n",
-       "      <td>NFTE</td>\n",
-       "      <td>18</td>\n",
-       "      <td>NFTEarthOFT</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>0x96bBD55479e9923512dcc95Eb7Df5edDe6FB9874</td>\n",
-       "      <td>wOpenX</td>\n",
-       "      <td>18</td>\n",
-       "      <td>OpenX Optimism</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>0xAd42D013ac31486B73b6b059e748172994736426</td>\n",
-       "      <td>1INCH</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1INCH Token</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6</td>\n",
-       "      <td>crvUSD</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Curve.Fi USD Stablecoin</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>0xa925f4057d6E6C8FAf8bdE537Ad14BA91A1D0337</td>\n",
-       "      <td>SYNTH</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Synth</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>0xaf3A6f67Af1624d3878A8d30b09FAe7915DcA2a0</td>\n",
-       "      <td>EQB</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Equilibria Token</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>0xc5d43a94e26fca47a9b21cf547ae4aa0268670e1</td>\n",
-       "      <td>FPI</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Frax Price Index</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>0xc871cCf95024eFa2CbcE69B5B775D2a1DcF49c1B</td>\n",
-       "      <td>GROW</td>\n",
-       "      <td>18</td>\n",
-       "      <td>ValleyDAO Token</td>\n",
-       "      <td>[ethereum-optimism]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        address   symbol  decimals  \\\n",
-       "3    0x03e5b5930f3a42b56af4a982b10e60957bdd2f61      D2D        18   \n",
-       "62   0x629c2fd5d5f432357465b59d7832389a89956f0b      COC        18   \n",
-       "74   0x6c518f9D1a163379235816c543E62922a79863Fa   bwAJNA        18   \n",
-       "87   0x76c37F9949e05b37C8373d155C1Fef46a6858481  ePendle        18   \n",
-       "99   0x8368Dca5CE2a4Db530c0F6e535d90B6826428Dee     FPIS        18   \n",
-       "101  0x8637725aDa78db0674a679CeA2A5e0A0869EF4A1     NFTE        18   \n",
-       "116  0x96bBD55479e9923512dcc95Eb7Df5edDe6FB9874   wOpenX        18   \n",
-       "126  0xAd42D013ac31486B73b6b059e748172994736426    1INCH        18   \n",
-       "137  0xC52D7F23a2e460248Db6eE192Cb23dD12bDDCbf6   crvUSD        18   \n",
-       "164  0xa925f4057d6E6C8FAf8bdE537Ad14BA91A1D0337    SYNTH        18   \n",
-       "167  0xaf3A6f67Af1624d3878A8d30b09FAe7915DcA2a0      EQB        18   \n",
-       "184  0xc5d43a94e26fca47a9b21cf547ae4aa0268670e1      FPI        18   \n",
-       "185  0xc871cCf95024eFa2CbcE69B5B775D2a1DcF49c1B     GROW        18   \n",
-       "\n",
-       "                        name            list_name  \n",
-       "3                      Prime  [ethereum-optimism]  \n",
-       "62   CryptoOracle Collective  [ethereum-optimism]  \n",
-       "74         Burn Wrapped AJNA  [ethereum-optimism]  \n",
-       "87         Equilibria Pendle  [ethereum-optimism]  \n",
-       "99    Frax Price Index Share  [ethereum-optimism]  \n",
-       "101              NFTEarthOFT  [ethereum-optimism]  \n",
-       "116           OpenX Optimism  [ethereum-optimism]  \n",
-       "126              1INCH Token  [ethereum-optimism]  \n",
-       "137  Curve.Fi USD Stablecoin  [ethereum-optimism]  \n",
-       "164                    Synth  [ethereum-optimism]  \n",
-       "167         Equilibria Token  [ethereum-optimism]  \n",
-       "184         Frax Price Index  [ethereum-optimism]  \n",
-       "185          ValleyDAO Token  [ethereum-optimism]  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "adds = df[~df['contract_address'].isin(dune_list['contract_address'])]\n",
-    "display(adds[['address','symbol','decimals', 'name','list_name']])\n"
+    "# display(adds[['address','symbol','decimals', 'name','list_name']])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
