--- a/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
@@ -37,6 +37,7 @@
     "chain_mappings = {\n",
     "    'zora': 'Zora Network',\n",
     "    'pgn': 'Public Goods Network',\n",
+    "    'base': 'Base Mainnet'\n",
     "    # Add more mappings as needed\n",
     "}"
    ]
