--- a/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "#https://dash.goldsky.com/question/20-get-kr1-active-developers\n",
     "resp = mb.get_mb_query_response(mb_url_base, session_id, 20, num_retries = 3)\n",
-    "# print(resp)"
+    "# print(resp)\n"
    ]
   },
   {
@@ -76,8 +76,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df = pd.DataFrame(resp)\n",
     "\n",
+    "try:\n",
+    "    data_df = pd.DataFrame(resp)\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error in creating DataFrame: {e}\")\n",
+    "\n",
+    "print(\"Type of response:\", type(resp))\n",
+    "\n",
+    "if resp:\n",
+    "    print(\"First element of the list:\", resp[0])\n",
+    "else:\n",
+    "    print(\"The list is empty\")\n",
+    "\n",
+    "keys_set = {frozenset(d.keys()) for d in resp if isinstance(d, dict)}\n",
+    "if len(keys_set) > 1:\n",
+    "    print(\"Dictionaries have different sets of keys.\")\n",
+    "else:\n",
+    "    print(\"All dictionaries have the same set of keys.\")\n",
+    "\n",
+    "standard_keys = set(resp[0].keys())\n",
+    "\n",
+    "for i, dic in enumerate(resp):\n",
+    "    # Get the set of keys of the current dictionary\n",
+    "    current_keys = set(dic.keys())\n",
+    "    \n",
+    "    # Check if the current set of keys matches the standard set of keys\n",
+    "    if current_keys != standard_keys:\n",
+    "        print(f\"Dictionary at index {i} does not have the standard set of keys.\")\n",
+    "        print(f\"Dictionary keys: {current_keys}\")\n",
+    "        print(f\"Standard keys:   {standard_keys}\")\n",
+    "        print(f\"Dictionary content: {dic}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_df['chain'] = data_df['chain'].replace(chain_mappings)\n",
     "\n",
     "print(data_df.columns)\n",
@@ -113,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
