--- a/l2_economics/build_cost_projection_model.ipynb
+++ b/l2_economics/build_cost_projection_model.ipynb
@@ -5109,7 +5109,8 @@
     "    print(f\"{feature_names[i]}: {coef[i]}\")\n",
     "\n",
     "print(\"\")\n",
-    "print(\"^ Input this output in to GPT to generate a python / google sheets apps script function\")"
+    "print(\"^ Input this output in to GPT to generate a python / google sheets apps script function\")\n",
+    "print(\"Note: This seems like the best, lets yolo use it\")"
    ]
   },
   {
@@ -5217,37 +5218,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20855799.62597847,\n",
-       " {'calldata_bytes_per_user_tx': 649327.182051211,\n",
-       "  'calldata_gas_per_user_tx': -43334.3935170693,\n",
-       "  'l2_num_txs_per_day': 2364.17843144964})"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Extracting the coefficients and intercept from the trained model\n",
-    "intercept = linear_regressor.intercept_\n",
-    "coefficients = linear_regressor.coef_\n",
-    "\n",
-    "# Creating a dictionary to hold the feature names and their respective coefficients\n",
-    "feature_coeff_dict = dict(zip(features, coefficients))\n",
-    "\n",
-    "# Displaying the intercept and coefficients\n",
-    "intercept, feature_coeff_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 189,
    "metadata": {},
    "outputs": [
@@ -5267,6 +5237,7 @@
     }
    ],
    "source": [
+    "#Linear Interactions\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
