--- a/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +51,21 @@
     "        session_id = os.environ[\"MS_METABASE_SESSION_ID\"]\n",
     "except: #if not, make one\n",
     "        print('creating new session')\n",
-    "        session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)\n",
-    "# print(session_id)\n",
-    "\n"
+    "        session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(session_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
