--- a/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
@@ -52,9 +52,16 @@
     "        session_id = os.environ[\"MS_METABASE_SESSION_ID\"]\n",
     "except: #if not, make one\n",
     "        print('creating new session')\n",
-    "        session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)\n",
-    "# print(session_id)\n",
-    "\n"
+    "        session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(session_id)"
    ]
   },
   {
@@ -67,7 +74,7 @@
     "\n",
     "#https://dash.goldsky.com/question/20-get-kr1-active-developers\n",
     "resp = mb.get_mb_query_response(mb_url_base, session_id, 20, num_retries = 3)\n",
-    "# print(resp)\n"
+    "# print(resp)"
    ]
   },
   {
@@ -150,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
