--- a/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
@@ -72,7 +72,9 @@
     "# Run Query\n",
     "\n",
     "#21-op-chains-activity-by-day\n",
-    "resp = mb.get_mb_query_response(mb_url_base, session_id, 21, num_retries = 3)\n",
+    "query_num = 21\n",
+    "print(query_num)\n",
+    "resp = mb.get_mb_query_response(mb_url_base, session_id, query_num, num_retries = 3)\n",
     "# print(resp)"
    ]
   },
