--- a/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
@@ -73,7 +73,9 @@
     "# Run Query\n",
     "\n",
     "#https://dash.goldsky.com/question/20-get-kr1-active-developers\n",
-    "resp = mb.get_mb_query_response(mb_url_base, session_id, 20, num_retries = 3)\n",
+    "query_num = 20\n",
+    "print(query_num)\n",
+    "resp = mb.get_mb_query_response(mb_url_base, session_id, query_num, num_retries = 3)\n",
     "# print(resp)"
    ]
   },
