--- a/op_chains_tracking/mb_gs_used_contracts_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_used_contracts_to_dune.ipynb
@@ -73,7 +73,9 @@
     "# Run Query\n",
     "\n",
     "#https://dash.goldsky.com/question/35-kr2-intermediate-get-daily-is-used-contracts\n",
-    "resp = mb.get_mb_query_response(mb_url_base, session_id, 35, num_retries = 3)\n",
+    "query_num = 35\n",
+    "print(query_num)\n",
+    "resp = mb.get_mb_query_response(mb_url_base, session_id, query_num, num_retries = 3)\n",
     "# print(resp)"
    ]
   },
