--- a/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_op_chain_daily_usage_to_dune.ipynb
@@ -91,7 +91,7 @@
     "print(data_df.columns)\n",
     "# print(data_df.dtypes)\n",
     "\n",
-    "print(data_df.sample(5))"
+    "print(data_df.head(5))"
    ]
   },
   {
