--- a/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_active_devs_to_dune.ipynb
@@ -48,11 +48,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try: #do you already have a session\n",
-    "        session_id = os.environ[\"MS_METABASE_SESSION_ID\"]\n",
-    "except: #if not, make one\n",
-    "        print('creating new session')\n",
-    "        session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)"
+    "# Get Session ID\n",
+    "\n",
+    "session_id = mb.get_session_id(mb_url_base, mb_name, mb_pw)\n",
+    "\n",
+    "# try: #do you already have a session\n",
+    "#         session_id = os.environ[\"MS_METABASE_SESSION_ID\"]\n",
+    "#         # Test if session ID\n",
+    "#         mb.get_mb_query_response(mb_url_base, session_id, 42, num_retries = 1)\n",
+    "# except: #if not, make one\n",
+    "#         print('creating new session')\n",
+    "#         session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)"
    ]
   },
   {
