--- a/op_chains_tracking/mb_gs_used_contracts_to_dune.ipynb
+++ b/op_chains_tracking/mb_gs_used_contracts_to_dune.ipynb
@@ -48,11 +48,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try: #do you already have a session\n",
-    "        session_id = os.environ[\"MS_METABASE_SESSION_ID\"]\n",
-    "except: #if not, make one\n",
-    "        print('creating new session')\n",
-    "        session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)"
+    "session_id = mb.get_session_id(mb_url_base, mb_name, mb_pw)\n",
+    "\n",
+    "# try: #do you already have a session\n",
+    "#         session_id = os.environ[\"MS_METABASE_SESSION_ID\"]\n",
+    "# except: #if not, make one\n",
+    "#         print('creating new session')\n",
+    "#         session_id = mb.get_mb_session_key(mb_url_base,mb_name,mb_pw)"
    ]
   },
   {
